<resources>
    <string name="app_name">Transalator</string>
    <string name="app_title">离线中英文翻译器</string>
    <string name="chinese_to_english">中文 → 英文</string>
    <string name="english_to_chinese">英文 → 中文</string>
    <string name="input_label">输入文本:</string>
    <string name="input_hint">输入或通过语音识别输入文本</string>
    <string name="hold_to_speak">点击说话</string>
    <string name="stop_speak">停止说话</string>
    <string name="translate">翻译</string>
    <string name="translation_result">翻译结果:</string>
    <string name="voice_input">语音输入</string>
    <string name="preparing_vosk_model">正在准备Vosk模型...</string>
    <string name="vosk_model_ready">Vosk模型准备就绪，请按住按钮说话</string>
    <string name="chinese_to_english_model_download_failed">中译英模型下载失败: </string>
    <string name="english_to_chinese_model_download_failed">英译中模型下载失败: </string>
    <string name="please_speak">请说话... </string>
    <string name="device_no_support">您的设备不支持语音识别：</string>
    <string name="translation_failed">翻译失败: </string>
    <string name="device_not_support_offline">您的设备可能不支持离线</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="download_voice_package">如需语音识别，请下载相应语音包</string>
    <string name="need_to_download_package">需要下载语音识别包</string>
    <string name="download_it_now">为了支持离线语音识别，需要下载语音识别包。是否现在下载？</string>
    <string name="download">下载</string>
    <string name="unable_open_voice_settings">无法打开语音设置，请手动前往设置->语言和输入法下载语音包</string>
    <string name="cancel">取消</string>
    <string name="need_microphone_permission">需要麦克风权限才能使用语音识别功能</string>
    <string name="audio_error">音频错误</string>
    <string name="client_error">客户端错误</string>
    <string name="insufficient_permissions">权限不足</string>
    <string name="network_error">网络错误</string>
    <string name="network_timeout">网络超时</string>
    <string name="no_matching_results">没有匹配的结果</string>
    <string name="identifier_busy">识别器忙</string>
    <string name="server_error">服务器错误</string>
    <string name="voice_timeout">语音超时</string>
    <string name="unknown_error">未知错误</string>
    <string name="speech_recognition_error">语音识别错误</string>
</resources>